--- a/src/App/Client/GoldEx.Client.Components/Layouts/BaseLayout.razor
+++ b/src/App/Client/GoldEx.Client.Components/Layouts/BaseLayout.razor
@@ -98,7 +98,7 @@
             },
             LayoutProperties = new LayoutProperties
             {
-            //DefaultBorderRadius = "50" // Uncomment if you want rounded corners
+                DefaultBorderRadius = "24px", // Uncomment if you want rounded corners
             },
             Typography = new Typography
             {
