--- a/src/App/Client/GoldEx.Client/Pages/Products/Components/ProductsList.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Products/Components/ProductsList.razor
@@ -9,11 +9,11 @@
         <MudSpacer />
 
         <MudHidden Breakpoint="Breakpoint.SmAndDown">
-            <MudButton Class="ml-4" Color="Color.Primary" EndIcon="@Icons.Material.Filled.Add" OnClick="@(_ => OnCreateProduct())" Size="Size.Small" Variant="Variant.Filled">ثبت جنس جدید</MudButton>
+            <MudFab Class="ml-4" Color="Color.Success" EndIcon="@Icons.Material.Filled.Add" Label="ثبت جنس جدید" OnClick="@(_ => OnCreateProduct())" Size="Size.Small"  />
         </MudHidden>
 
         <MudHidden Breakpoint="Breakpoint.MdAndUp">
-            <MudIconButton Color="@Color.Primary" Icon="@Icons.Material.Filled.Add" OnClick="@(_ => OnCreateProduct())" Size="@Size.Small" Variant="@Variant.Filled"></MudIconButton>
+            <MudFab Class="ml-4" Color="Color.Success" EndIcon="@Icons.Material.Filled.Add" OnClick="@(_ => OnCreateProduct())" Size="Size.Small" />
         </MudHidden>
     </ToolBarContent>
     <HeaderContent>
@@ -35,8 +35,8 @@
         <MudTd DataLabel="اجرت">
             @(context.WageType switch
             {
-                WageType.Fixed => $"{context.Wage.FormatNumber()} {context.WagePriceUnitTitle}",
-                WageType.Percent => context.Wage.FormatNumber() + " درصد",
+                WageType.Fixed => $"{context.Wage?.ToCurrencyFormat()} {context.WagePriceUnitTitle}",
+                WageType.Percent => context.Wage?.ToString("G29") + " درصد",
                 _ => "ندارد"
             })
         </MudTd>
@@ -45,16 +45,13 @@
         <MudTd DataLabel="عملیات">
             <div class="d-flex gap-2">
                 <MudTooltip Text="چاپ بارکد">
-                    <MudIconButton Size="@Size.Small" Variant="@Variant.Filled" Icon="@Icons.Material.Filled.Print"
-                                   Color="@Color.Success"></MudIconButton>
+                    <MudFab Color="Color.Info" EndIcon="@Icons.Material.Filled.Print" Size="Size.Small" />
                 </MudTooltip>
                 <MudTooltip Text="ویرایش جنس">
-                    <MudIconButton Icon="@Icons.Material.Filled.Edit" Size="Size.Small" Variant="Variant.Filled"
-                                   Color="Color.Primary" OnClick="_ => OnEditProduct(context)"></MudIconButton>
+                    <MudFab Color="Color.Primary" EndIcon="@Icons.Material.Filled.Edit" Size="Size.Small" OnClick="_ => OnEditProduct(context)" />
                 </MudTooltip>
                 <MudTooltip Text="حذف جنس">
-                    <MudIconButton OnClick="@(_ => OnRemoveProduct(context))" ClickPropagation="true"
-                                   Size="@Size.Small" Variant="@Variant.Filled" Icon="@Icons.Material.Filled.Delete" Color="@Color.Error"></MudIconButton>
+                    <MudFab Color="Color.Error" EndIcon="@Icons.Material.Filled.Delete" Size="Size.Small" OnClick="@(_ => OnRemoveProduct(context))" />
                 </MudTooltip>
             </div>
         </MudTd>
