--- a/src/App/Client/GoldEx.Client/Pages/Settings/Shared/SettingsLayout.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Settings/Shared/SettingsLayout.razor
@@ -10,12 +10,12 @@
     </MudBreadcrumbs>
 
     <MudGrid>
-        <MudItem md="3">
+        <MudItem xs="12" md="3">
             <MudText Typo="Typo.h6" GutterBottom="true">تنظیمات برنامه</MudText>
-            <hr />
+            <MudDivider Class="mb-4" Style="margin-top: 15px;" />
             <SettingsNavMenu />
         </MudItem>
-        <MudItem md="9">
+        <MudItem xs="12" md="9">
             @Body
         </MudItem>
     </MudGrid>
