--- a/src/App/Client/GoldEx.Client/Pages/Settings/BaseInfo.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Settings/BaseInfo.razor
@@ -6,7 +6,7 @@
 <PageTitle>اطلاعات پایه</PageTitle>
 
 <MudText Typo="Typo.h6" GutterBottom="true">اطلاعات پایه</MudText>
-<hr />
+<MudDivider Class="my-4" />
 
 <EditForm Model="_model" OnValidSubmit="OnGallerySettingsSubmitted">
     <DataAnnotationsValidator />
