--- a/src/App/Client/GoldEx.Client/Pages/Settings/CategoriesList.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Settings/CategoriesList.razor
@@ -5,11 +5,19 @@
 
 <PageTitle>دسته بندی اجناس</PageTitle>
 
-<MudText Typo="Typo.h6" GutterBottom="true">دسته بندی اجناس</MudText>
-<hr />
 
-<MudButton Color="Color.Success" EndIcon="@Icons.Material.Filled.Add" OnClick="@(_ => OnCreateCategory())" 
-           Size="Size.Small" Variant="Variant.Filled" FullWidth="true">افزودن دسته جدید</MudButton>
+<div class="d-flex align-center justify-space-between">
+    <MudText Typo="Typo.h6" GutterBottom="true">دسته بندی اجناس</MudText>
+    
+    <MudHidden Breakpoint="Breakpoint.SmAndDown">
+        <MudFab Color="Color.Success" EndIcon="@Icons.Material.Filled.Add" Label="افزودن دسته جدید" Size="Size.Small" OnClick="_ => OnCreateCategory()" />
+    </MudHidden>
+
+    <MudHidden Breakpoint="Breakpoint.MdAndUp">
+        <MudFab Color="Color.Success" EndIcon="@Icons.Material.Filled.Add" Size="Size.Small" OnClick="_ => OnCreateCategory()" />
+    </MudHidden>
+</div>
+<MudDivider Class="my-2" />
 
 <MudTable T="ProductCategoryVm" Hover="true" FixedHeader="true" Dense="true" Items="_productCategories"
           SelectOnRowClick="false" Breakpoint="Breakpoint.Xs" Elevation="3" Height="350px">
@@ -24,12 +32,10 @@
         <MudTd DataLabel="عملیات">
             <div class="d-flex gap-2">
                 <MudTooltip Text="ویرایش">
-                    <MudIconButton Icon="@Icons.Material.Filled.Edit" Size="Size.Small" Variant="Variant.Filled"
-                                   Color="Color.Primary" OnClick="_ => OnEditCategory(context)"></MudIconButton>
+                    <MudFab Color="Color.Primary" EndIcon="@Icons.Material.Filled.Edit" OnClick="_ => OnEditCategory(context)" Size="Size.Small"></MudFab>
                 </MudTooltip>
                 <MudTooltip Text="حذف">
-                    <MudIconButton OnClick="@(_ => OnRemoveCategory(context))" ClickPropagation="true"
-                                   Size="@Size.Small" Variant="@Variant.Filled" Icon="@Icons.Material.Filled.Delete" Color="@Color.Error"></MudIconButton>
+                    <MudFab Color="@Color.Error" EndIcon="@Icons.Material.Filled.Delete" OnClick="@(_ => OnRemoveCategory(context))" Size="@Size.Small"></MudFab>
                 </MudTooltip>
             </div>
         </MudTd>
