--- a/src/App/Client/GoldEx.Client/Pages/Settings/PriceUnits.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Settings/PriceUnits.razor
@@ -5,12 +5,19 @@
 
 <PageTitle>مدیریت واحدهای ارزی</PageTitle>
 
-<MudText Typo="Typo.h6" GutterBottom="true">مدیریت واحدهای ارزی</MudText>
-<hr />
+<div class="d-flex align-center justify-space-between">
+    <MudText Typo="Typo.h6" GutterBottom="true">مدیریت واحدهای ارزی</MudText>
+    
+    <MudHidden Breakpoint="Breakpoint.SmAndDown">
+        <MudFab Color="Color.Success" EndIcon="@Icons.Material.Filled.Add" Label="افزودن واحد ارزی جدید" Size="Size.Small" OnClick="_ => OnCreate()" />
+    </MudHidden>
 
-<MudButton Color="Color.Success" EndIcon="@Icons.Material.Filled.Add" OnClick="@(_ => OnCreate())"
-           Size="Size.Small" Variant="Variant.Filled" FullWidth="true">افزودن واحد ارزی جدید</MudButton>
-           
+    <MudHidden Breakpoint="Breakpoint.MdAndUp">
+        <MudFab Color="Color.Success" EndIcon="@Icons.Material.Filled.Add" Size="Size.Small" OnClick="_ => OnCreate()" />
+    </MudHidden>
+</div>
+<MudDivider Class="my-2" />
+
 <MudTable T="PriceUnitVm" Hover="true" FixedHeader="true" Dense="true" Items="_priceUnits"
           SelectOnRowClick="false" Breakpoint="Breakpoint.Xs" Elevation="3" Height="350px">
     <HeaderContent>
@@ -22,7 +29,7 @@
     <RowTemplate>
         <MudTd DataLabel="ردیف">@context.Index</MudTd>
         <MudTd DataLabel="عنوان">
-            @context.Title 
+            @context.Title
             @if (context.IsDefault)
             {
                 <MudChip T="string" Color="Color.Success" Size="Size.Small" Class="ml-2">پیش فرض</MudChip>
@@ -41,31 +48,26 @@
         <MudTd DataLabel="عملیات">
             <div class="d-flex gap-2">
                 <MudTooltip Text="ویرایش">
-                    <MudIconButton Icon="@Icons.Material.Filled.Edit" Size="Size.Small" Variant="Variant.Filled"
-                                   Color="Color.Primary" OnClick="_ => OnEdit(context)"></MudIconButton>
+                    <MudFab Color="Color.Primary" EndIcon="@Icons.Material.Filled.Edit" Size="Size.Small" OnClick="_ => OnEdit(context)" />
                 </MudTooltip>
                 @if (context.IsActive)
                 {
                     <MudTooltip Text="غیرفعال سازی">
-                        <MudIconButton OnClick="@(_ => OnStatusChanged(context))" ClickPropagation="true"
-                                       Size="@Size.Small" Variant="@Variant.Filled" Icon="@Icons.Material.Filled.Lock" Color="@Color.Error"></MudIconButton>
+                        <MudFab Color="Color.Error" EndIcon="@Icons.Material.Filled.Lock" Size="Size.Small" OnClick="_ => OnStatusChanged(context)" />
                     </MudTooltip>
                 }
                 else
                 {
                     <MudTooltip Text="فعال سازی">
-                        <MudIconButton OnClick="@(_ => OnStatusChanged(context))" ClickPropagation="true"
-                                       Size="@Size.Small" Variant="@Variant.Filled" Icon="@Icons.Material.Filled.LockOpen" Color="@Color.Success"></MudIconButton>
+                        <MudFab Color="Color.Success" EndIcon="@Icons.Material.Filled.LockOpen" Size="Size.Small" OnClick="_ => OnStatusChanged(context)" />
                     </MudTooltip>
                 }
                 @if (context is { IsDefault: false, IsActive: true })
                 {
                     <MudTooltip Text="تنظیم به عنوان ارز پیش فرض">
-                        <MudIconButton OnClick="@(_ => OnSetAsDefault(context.Id))" ClickPropagation="true"
-                                       Size="@Size.Small" Variant="@Variant.Filled" Icon="@Icons.Material.Filled.Check" Color="@Color.Success"></MudIconButton>
+                        <MudFab Color="Color.Info" EndIcon="@Icons.Material.Filled.Check" Size="Size.Small" OnClick="_ => OnSetAsDefault(context.Id)" />
                     </MudTooltip>
                 }
-
             </div>
         </MudTd>
     </RowTemplate>
